--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "postcss tailwind.css -o output.css"
+    "build": "parcel build index.html",
+    "dev": "parcel index.html"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
+    "process": "^0.11.10",
     "tailwindcss": "^3.4.4"
   }
 }
