--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Brian Mac's Portfolio",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build index.html",
-    "dev": "parcel index.html"
+    "build": "parcel build *.html",
+    "dev": "parcel *.html"
   },
   "repository": {
     "type": "git",
