--- a/package.json
+++ b/package.json
@@ -16,18 +16,5 @@
   "bugs": {
     "url": "https://github.com/Macodocious/portfolio/issues"
   },
-  "homepage": "https://github.com/Macodocious/portfolio#readme",
-  "dependencies": {
-    "parcel": "^2.12.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vue": "^3.4.27"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "postcss-cli": "^11.0.0",
-    "process": "^0.11.10",
-    "tailwindcss": "^3.4.4"
-  }
+  "homepage": "https://macodocious.github.io/portfolio"
 }
