Reverted some changes

--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Brian Mac's Portfolio",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Macodocious/portfolio.git"
@@ -14,5 +12,10 @@
   "bugs": {
     "url": "https://github.com/Macodocious/portfolio/issues"
   },
-  "homepage": "https://macodocious.github.io/portfolio"
+  "homepage": "https://macodocious.github.io/portfolio",
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
+  }
 }
