--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "vue": "^3.4.27"
   }
 }
