--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "vue": "^3.4.27"
+    "react": "^18.3.1"
   }
 }
