--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Brian Mac's Portfolio",
-  "scripts": {},
+  "scripts": {
+    "build": "postcss tailwind.css -o output.css"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Macodocious/portfolio.git"
@@ -19,6 +21,7 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "postcss-cli": "^11.0.0",
     "react": "^18.3.1"
   }
 }
