--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "node": "^20.14.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1"
   }
