--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "gulp": "^5.0.0",
+    "gulp-autoprefixer": "^9.0.0",
+    "gulp-postcss": "^10.0.0",
     "node": "^20.14.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1"
