--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.5",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^9.0.0",
     "gulp-postcss": "^10.0.0",
