--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^9.0.0",
     "gulp-postcss": "^10.0.0",
